--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -1,19 +1,58 @@
-#carouselExampleIndicators{
-  margin-bottom: 50px;
-}
-
-.carousel-inner{
-  height: 100%;
-  left: 0;
-  top: 0;
-  padding: 30px 45px;
+#main-footer{
+  background: pink;
+  color: black;
   text-align: center;
-  width: 340px;
+  padding: 20px;
+  margin-top: 0px;
 }
 
-.carousel-inner img{
-  display: block;
-  max-width: 100%;
-  height: auto;
-  margin: 0 auto;
+#main-footer p{
+margin: 0;
+}
+
+#main-footer{
+  background: pink;
+  color: black;
+  height: 50px;
+}
+
+#container-card{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+#container-card article{
+  margin: 15px;
+}
+
+#container-card img{
+  margin:10px auto;
+ 		    display:block;
+}
+
+
+/*preguntas frecuentes estilo*/
+#container-preguntas h1{
+  text-decoration: underline;
+}
+
+
+/*productos estilo*/
+.container-ropa {
+  margin:auto;
+}
+
+.container-ropa ul{
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+.container-ropa ul li{
+  width: 300px;
+  margin: 5px;
+text-align: center;
+  float: left;
+  border: 1px solid #d1d1d1;
 }
